bench/real: rounds 13–14 — single-item endpoint at 1 CPU, JFR profiles of JIT and native -O2 (RSA verify + jOOQ rendering are the gap); KEEP=1 and SERVER_ARGS in the rig
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012HjZVPe6hrTgyjSc7YkTz8